Migration to VSCode and closer use of deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # =========================
-# PlatformIO files and folders
+# PlatformIO / VSCode files and folders
 # =========================
 .pioenvs
 .piolibdeps
 .clang_complete
 .gcc-flags.json
+.pio/
+.vscode/
 
 # Project specific
 # =========================
