--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,19 @@ board = d1_mini
 framework = arduino
 
 lib_deps =
-     ;DS1820 ; Check how to use it, better than Dallas?
-     ;PubSubClient
+     ArduinoJson@5.13.4 ; Hard code deps for now (2019-08-07)
+          ; 6.x is a breaking change and shouldn't be used with Homie's develop branch
+          ; See : https://arduinojson.org/v6/doc/upgrade/
+     AsyncMqttClient
+     AsyncTCP
+     Bounce2
      DallasTemperature
+     #DS1820
+     ESP Async WebServer
+     ESPAsyncTCP
      OneWire
-     ;https://github.com/homieiot/homie-esp8266.git#develop
-     https://github.com/homieiot/homie-esp8266.git
+     https://github.com/homieiot/homie-esp8266.git#develop ; Note a develop-v3 exists
+     ;https://github.com/homieiot/homie-esp8266.git
+     PubSubClient
+
+monitor_speed = 115200
