--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Secret for homie configuration, includes WIFI password
+data/homie/config.json
