Remapped pins to add an OLED screen

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,16 +16,22 @@ board = d1_mini
 framework = arduino
 
 lib_deps =
+     ##########################################################
+     ## Generic Homie dependencies
      ArduinoJson
      AsyncMqttClient
      AsyncTCP
      Bounce2
-     DallasTemperature
-     #DS1820
      ESP Async WebServer
      ESPAsyncTCP
-     OneWire
      https://github.com/homieiot/homie-esp8266.git#develop ; Note a develop-v3 exists
      PubSubClient
+
+     ## DS1820 dependencies
+     DallasTemperature
+     OneWire
+
+     ## I2C OLED Screen dependencies
+     Adafruit SSD1306
 
 monitor_speed = 115200
