--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,9 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+build_flags = -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
+upload_speed = 921600
+monitor_speed = 115200
 
 lib_deps =
      ##########################################################
@@ -33,5 +36,4 @@ lib_deps =
 
      ## I2C OLED Screen dependencies
      Adafruit SSD1306
-
-monitor_speed = 115200
+     Adafruit GFX
